--- a/index.html
+++ b/index.html
@@ -8,30 +8,20 @@
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <script src="main.js"></script>
 </head>
+
+
+
 <body>
-    <h1 class="headers">about me </h1>
+    <h1 class="headers">About me </h1>
     <h2 class="headers">dawit</h2>
-    <p id="firstparagraph">about me</p>
+    <p id="firstParagraph">first paragraph</p>
     <p>the end.</p>
     <br>  line to know
     <b>some new text </b>
     <i>about me</i>
-    <div>diff about me</div>
-    <span> SSSPPPabout me</span>
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="main.js"></script>
-</head>
-<b
-}
-    
-
+    <div>different about me</div>
+    <span> about me</span>
     
 </body>
-<
+
+</html>
